Wrote scripts to automate traffic from clients, updated dockerfiles.

--- a/Docker/dockerfiles/NetworkTraffic/NetworkML_1.ipynb
+++ b/Docker/dockerfiles/NetworkTraffic/NetworkML_1.ipynb
@@ -1,42 +1,26 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "##Your machine learning stuff needed and parsing packages idk if you'll use a Jupyter but here\n"
-      ],
       "metadata": {
         "id": "hGCydVBOqmIB"
-      }
+      },
+      "source": [
+        "##Your machine learning stuff needed and parsing packages idk if you'll use a Jupyter but here\n"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "You can put this in a .py file and it wil make http normal traffic and video streaming traffic"
-      ],
       "metadata": {
         "id": "PFahd0fDucWV"
-      }
+      },
+      "source": [
+        "You can put this in a .py file and it wil make http normal traffic and video streaming traffic"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install scapy"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -44,11 +28,10 @@
         "id": "SZmrQu66qZyk",
         "outputId": "9e310c84-5062-4e3e-950b-24b3793943d1"
       },
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting scapy\n",
             "  Downloading scapy-2.5.0.tar.gz (1.3 MB)\n",
@@ -63,10 +46,30 @@
             "Successfully installed scapy-2.5.0\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install scapy"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4Q_ZS9i0yFXm",
+        "outputId": "7cfa648f-e111-4a28-b449-37cbadfe6cfe"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "75.181.196.138\n"
+          ]
+        }
+      ],
       "source": [
         "#random IP if needed function\n",
         "import random\n",
@@ -76,27 +79,15 @@
         "# Using the RANDIP() function\n",
         "random_ip = RANDIP()\n",
         "print(random_ip)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "4Q_ZS9i0yFXm",
-        "outputId": "7cfa648f-e111-4a28-b449-37cbadfe6cfe"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "75.181.196.138\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "TPmkweD3vC8r"
+      },
+      "outputs": [],
       "source": [
         "from scapy.all import *\n",
         "import random\n",
@@ -128,15 +119,15 @@
         "        send(http_get)\n",
         "\n",
         "    counter += 1"
-      ],
-      "metadata": {
-        "id": "TPmkweD3vC8r"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "q9fKmm_6qjtU"
+      },
+      "outputs": [],
       "source": [
         "#needed packages\n",
         "import time\n",
@@ -146,26 +137,26 @@
         "from scapy.all import rdpcap\n",
         "import pandas as pd\n",
         "from sklearn.model_selection import train_test_split"
-      ],
-      "metadata": {
-        "id": "q9fKmm_6qjtU"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "Pcap_file_path = #'Path to your pcap'"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "VdeGQzgBqtYr"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "Pcap_file_path = #'Path to your pcap'"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7Z08HYUnqyH9"
+      },
+      "outputs": [],
       "source": [
         "from scapy.all import rdpcap\n",
         "import pandas as pd\n",
@@ -196,15 +187,15 @@
         "    packet_df = pd.DataFrame(packet_data, columns=df_columns)\n",
         "\n",
         "    return packet_df\n"
-      ],
-      "metadata": {
-        "id": "7Z08HYUnqyH9"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "RRrDhoN1q4YR"
+      },
+      "outputs": [],
       "source": [
         "#make mroe of these functions to fill your parameters\n",
         "def IP_valid:\n",
@@ -214,55 +205,55 @@
         "    pd.drop(row)\n",
         "\n",
         "  return packet_df"
-      ],
-      "metadata": {
-        "id": "RRrDhoN1q4YR"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "uY_mfMYZriln"
+      },
+      "outputs": [],
       "source": [
         "#probs want a function that will label them into the three classes you presented them on\n",
         "#make it a function with parameters\n",
         "df.add_column('Malicious')"
-      ],
-      "metadata": {
-        "id": "uY_mfMYZriln"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Beginning of splitting data up for your Classifier"
-      ],
       "metadata": {
         "id": "pyvmVlzRsGl1"
-      }
+      },
+      "source": [
+        "# Beginning of splitting data up for your Classifier"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Only include columns you need dont want to overload the function and overfit"
-      ],
       "metadata": {
         "id": "SkI-8CevsM5E"
-      }
+      },
+      "source": [
+        "## Only include columns you need dont want to overload the function and overfit"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "if you need to scale or transform your data let me know"
-      ],
       "metadata": {
         "id": "JXqRLiahsXaA"
-      }
+      },
+      "source": [
+        "if you need to scale or transform your data let me know"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "EFOOIQNzrtqI"
+      },
+      "outputs": [],
       "source": [
         "#Train test split shit\n",
         "from sklearn.model_selection import train_test_split\n",
@@ -271,15 +262,15 @@
         "#i really dont remember the technicalities))\n",
         "x_train, x_test, y_train, y_test = train_test_split(df.drop(columns=['Exited']).values, df.Exited.values,\n",
         "                                                    test_size=0.2, random_state=42"
-      ],
-      "metadata": {
-        "id": "EFOOIQNzrtqI"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "x__-knZcsF_s"
+      },
+      "outputs": [],
       "source": [
         "from sklearn.tree import DecisionTreeClassifier\n",
         "from sklearn.metrics import classification_report\n",
@@ -296,49 +287,24 @@
         "\n",
         "#Print the classification report\n",
         "print(report)"
-      ],
-      "metadata": {
-        "id": "x__-knZcsF_s"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Also including a random forest and K Neighbors Classifier just in case these would yield more accuracy"
-      ],
       "metadata": {
         "id": "aftWRlPLs0Nk"
-      }
+      },
+      "source": [
+        "Also including a random forest and K Neighbors Classifier just in case these would yield more accuracy"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.metrics import classification_report\n",
-        "\n",
-        "# Initialize and fit the Random Forest classifier on the training data\n",
-        "clf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
-        "clf.fit(x_train, y_train)\n",
-        "\n",
-        "#Predictions on the testing data\n",
-        "y_pred = clf.predict(x_test)\n",
-        "\n",
-        "#Classification report\n",
-        "report = classification_report(y_test, y_pred)\n",
-        "\n",
-        "#Print the classification report\n",
-        "print(report)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "ca3NP5kasynG"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
+      "outputs": [],
       "source": [
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.metrics import classification_report\n",
@@ -355,22 +321,40 @@
         "\n",
         "#Print the classification report\n",
         "print(report)"
-      ],
-      "metadata": {
-        "id": "01P04-a6s60N"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "aV2WjaOXuY1W"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "01P04-a6s60N"
+      },
+      "outputs": [],
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.metrics import classification_report\n",
+        "\n",
+        "# Initialize and fit the Random Forest classifier on the training data\n",
+        "clf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+        "clf.fit(x_train, y_train)\n",
+        "\n",
+        "#Predictions on the testing data\n",
+        "y_pred = clf.predict(x_test)\n",
+        "\n",
+        "#Classification report\n",
+        "report = classification_report(y_test, y_pred)\n",
+        "\n",
+        "#Print the classification report\n",
+        "print(report)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "cpXZLUOBs67g"
+      },
+      "outputs": [],
       "source": [
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn.metrics import classification_report\n",
@@ -388,12 +372,28 @@
         "\n",
         "#Print the classification report\n",
         "print(report)\n"
-      ],
-      "metadata": {
-        "id": "cpXZLUOBs67g"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.12.0 64-bit",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.12.0"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "369219cbeaf94c5a1a585149417d4385040fa94a2dba42dc7e12a8b1008bb5a1"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
