--- a/Docker/dockerfiles/NetworkTraffic/NetworkML_1.ipynb
+++ b/Docker/dockerfiles/NetworkTraffic/NetworkML_1.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -33,17 +33,16 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Collecting scapy\n",
-            "  Downloading scapy-2.5.0.tar.gz (1.3 MB)\n",
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/1.3 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.1/1.3 MB\u001b[0m \u001b[31m3.5 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m19.0 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m14.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "Building wheels for collected packages: scapy\n",
-            "  Building wheel for scapy (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for scapy: filename=scapy-2.5.0-py2.py3-none-any.whl size=1444330 sha256=c6ba1a5ea5c84defa3ca9b35a199b1a861ee8f5a10ba74d9a44888b3ce698ce2\n",
-            "  Stored in directory: /root/.cache/pip/wheels/82/b7/03/8344d8cf6695624746311bc0d389e9d05535ca83c35f90241d\n",
-            "Successfully built scapy\n",
-            "Installing collected packages: scapy\n",
-            "Successfully installed scapy-2.5.0\n"
+            "Requirement already satisfied: scapy in c:\\users\\chadwick\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (2.5.0)\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "[notice] A new release of pip is available: 23.2.1 -> 23.3.1\n",
+            "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
           ]
         }
       ],
@@ -53,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -66,7 +65,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "75.181.196.138\n"
+            "15.187.83.89\n"
           ]
         }
       ],
@@ -83,11 +82,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "TPmkweD3vC8r"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Begin emission:\n",
+            "Finished sending 1 packets.\n",
+            "\n",
+            "Received 48853 packets, got 0 answers, remaining 1 packets\n",
+            "Begin emission:\n",
+            "Finished sending 1 packets.\n",
+            "\n",
+            "Received 110223 packets, got 0 answers, remaining 1 packets\n",
+            "Begin emission:\n",
+            "Finished sending 1 packets.\n",
+            "\n",
+            "Received 125200 packets, got 0 answers, remaining 1 packets\n",
+            "Begin emission:\n",
+            "Finished sending 1 packets.\n"
+          ]
+        },
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mCanceled future for execute_request message before replies were done"
+          ]
+        }
+      ],
       "source": [
         "from scapy.all import *\n",
         "import random\n",
@@ -385,7 +413,15 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.12.0"
     },
     "vscode": {
